@@ -113,17 +113,17 @@
 			<areascroll condition="not{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="54%" width="40%" layer="4">
 				<drawtext x="3%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
 			</areascroll>
-			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="40%" width="8%" layer="3">
+			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="39%" width="8%" layer="3">
 				<drawimage name="foldericon" imagetype="icon" path="ico_recfolder" x="0" width="{areawidth}" height="{areaheight}" valign="center" align="center"/>
 			</area>
-			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="45%" width="5%" layer="3">
-				<drawtext x="0%" valign="center" align="right" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numrecordingsfolder} " />
+			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="42%" width="5%" layer="3">
+				<drawtext x="0%" valign="center" align="right" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numrecordingsfolder}" />
 			</area>
-			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)++gt({newrecordingsfolder}, 0)" x="50%" width="5%" layer="3">
-				<drawtext x="0%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="/ {newrecordingsfolder} {tr(new)}" />
+			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)++gt({newrecordingsfolder}, 0)" x="47%" width="5%" layer="3">
+				<drawtext x="0%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="/{newrecordingsfolder} {tr(new)}" />
 			</area>
-			<areascroll condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="54%" width="40%" layer="4">
-				<drawtext x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
+			<areascroll condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="53%" width="40%" layer="4">
+				<drawtext x="1%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
 			</areascroll>
 <!--recordingtime-->
 			<area condition="{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="55%" width="40%" layer="3">
